Use data from JSON file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,10 +24,10 @@
         <h2>Most recent photo</h2>
         <figure class="stereo-image">
             <picture>
-                <source srcset="/images/4x3a.svg" media="(min-width:720px)"/>
-                <img src="/images/4x3.svg" alt="4x3 placeholder"/>
+                <source srcset="/images/stereo/<%= photo['file'] %>.jpg" media="(min-width:720px)"/>
+                <img src="/images/stereo/540/<%= photo['file'] %>_540.jpg" alt="<%= photo['alt']['en'] %>"/>
             </picture>
-            <figcaption>Placeholder</figcaption>
+            <figcaption><%= photo['title']['en'] %></figcaption>
         </figure>
         <p><a href="#">See other photos</a></p>
     </div>
