--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,15 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html lang="en">
+<%- include('layout/head', { title: title }) %>
+<body>
+<%- include('layout/header') %>
+<main>
+    <div class="content-wrapper">
+        <h1><%= message %></h1>
+        <h2><%= error.status %></h2>
+        <pre><%= error.stack %></pre>
+    </div>
+</main>
+<%- include('layout/footer') %>
+</body>
+</html>
