Add pages with all photos and about

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,10 +6,7 @@
 <main>
     <div class="content-wrapper">
         <h1><%= title %></h1>
-        <p>Welcome to <%= title %></p>
-        <h2>Most recent photo</h2>
-        <%- include('photos/photo', { photo: photo }) %>
-        <p><a href="/photos">See other photos</a></p>
+        <p>Text about this site will be here.</p>
     </div>
 </main>
 <%- include('layout/footer') %>
