--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -3,8 +3,8 @@
         <nav>
             <p class="logo"><a href="/">stereo.photo</a></p>
             <ul class="main-nav">
-                <li><a href="#">All photos</a></li>
-                <li><a href="#">About me</a></li>
+                <li><a href="/photos">All photos</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </nav>
     </div>
