Add initial styles

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,137 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+:root {
+    --aberration-shadow-a: .125rem .03125rem .125rem rgba(0, 255, 255, 0), -.125rem -.03125rem .125rem rgba(255, 0, 255, 0);
+    --aberration-shadow-b: .125rem .03125rem .125rem rgba(0, 255, 255, .5), -.125rem -.03125rem .125rem rgba(255, 0, 255, .5);
+    --aberration-shadow-c: .25rem .125rem .25rem rgba(0, 255, 255, .5), -.25rem -.125rem .25rem rgba(255, 0, 255, .5);
+
+    --bg-main: #fff;
+
+    --font-family-heading: serif;
+    --font-family-main: sans-serif;
+
+    --font-size-normal: 1rem;
+    --font-size-large: 1.5rem;
+    --font-size-xl: 2rem;
+    --font-size-xxl: 2.5rem;
+
+    --text-color-primary: #000;
+
+    --content-width: 68.75rem; /* 1100px */
+
+    --spacer-s: 1rem; /* 16px */
+    --spacer-xxs: calc(var(--spacer-s) / 4);
+    --spacer-xs: calc(var(--spacer-s) / 2);
+    --spacer-m: calc(var(--spacer-s) * 2);
+    --spacer-l: calc(var(--spacer-s) * 3);
+    --spacer-xl: calc(var(--spacer-s) * 4);
+    --spacer-xxl: calc(var(--spacer-s) * 6);
 }
 
-a {
-  color: #00B7FF;
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+/** {outline: solid red 1px;}*/
+
+html {
+    background: var(--bg-main);
+    color: var(--text-color-primary);
+    font: 400 1em var(--font-family-main);
+    margin: 0;
+    padding: 0;
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--font-family-heading);
+    margin: 0;
+}
+
+figure {
+    margin: 0;
+}
+
+.content-wrapper {
+    margin: 0 auto;
+    max-width: var(--content-width);
+    padding: var(--spacer-s);
+}
+
+.logo {
+    font: 400 var(--font-size-xxl) / 1 var(--font-family-heading);
+    margin: 0;
+    text-align: center;
+}
+
+.logo a {
+    color: inherit;
+    text-decoration: none;
+    text-shadow: var(--aberration-shadow-a);
+    transition: 1s;
+}
+
+.logo a:focus, .logo a:hover {
+    color: rgba(0, 0, 0, .75);
+    text-shadow: var(--aberration-shadow-b);
+}
+
+.main-header nav {
+    font-size: var(--font-size-large);
+}
+
+.main-header ul {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: var(--spacer-s) auto 0;
+    padding: 0;
+}
+
+.main-header li {
+    margin: 0;
+    padding: 0;
+}
+
+.main-header li:not(:last-of-type)::after {
+     background: #aaa;
+     content: '\A';
+     display: inline-block;
+     height: var(--font-size-normal);
+     margin: 0 var(--spacer-xxs);
+     width: .125rem;
+}
+
+.main-header nav a {
+    display: inline-block;
+    padding: var(--spacer-xxs) var(--spacer-s);
+}
+
+.stereo-image img {
+    aspect-ratio: 4/3;
+    width: 100%;
+}
+
+.photos {
+    list-style: none;
+    margin: var(--spacer-s) 0;
+    padding: 0;
+}
+
+.photos li {
+    margin: 0 0 var(--spacer-s) 0;
+    padding: 0;
 }
