Use classes for photos

--- a/views/photos/photo.ejs
+++ b/views/photos/photo.ejs
@@ -1,7 +1,7 @@
 <figure class="stereo-image">
     <picture>
-        <source srcset="/images/stereo/<%= photo['file'] %>.jpg" media="(min-width:720px)"/>
-        <img src="/images/stereo/540/<%= photo['file'] %>_540.jpg" alt="<%= photo['alt']['en'] %>"/>
+        <source srcset="/images/stereo/<%= photo.file %>.jpg" media="(min-width:720px)"/>
+        <img src="/images/stereo/540/<%= photo.file %>_540.jpg" alt="<%= photo.alt %>"/>
     </picture>
-    <figcaption><%= photo['title']['en'] %></figcaption>
+    <figcaption><%= photo.title %></figcaption>
 </figure>
