--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -8,25 +8,13 @@
         <h1>All photos</h1>
         <ul class="photos">
             <% for (let i = 0; i < photos.length; i++) { %>
-            <li>
-                <%- include('photos/photo', { photo: photos[i] }) %>
-            </li>
+                <li>
+                    <%- include('photos/photo', { photo: photos[i] }) %>
+                </li>
             <% } %>
         </ul>
 
-        <nav class="pagination">
-            <ul>
-                <li><a href="/photos?page=1" class="first">|&lt;</a></li>
-                <% if (pagination.prev) { %>
-                    <li><a href="/photos?page=<%= pagination.prev %>" class="prev"><%= pagination.prev %>&larr;</a></li>
-                <% } %>
-                <li><span><%= pagination.current %></span></li>
-                <% if (pagination.next) { %>
-                    <li><a href="/photos?page=<%= pagination.next %>" class="next">&rarr;<%= pagination.next %></a></li>
-                <% } %>
-                <li><a href="/photos?page=<%= pagination.last %>" class="last">&gt;|</a></li>
-            </ul>
-        </nav>
+        <%- include('photos/pagination', { pagination: pagination }) %>
     </div>
 </main>
 <%- include('layout/footer') %>
