Create single photo page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('layout/head', { title: title }) %>
+<%- include('layout/head', { title }) %>
 <body>
 <%- include('layout/header') %>
 <main>
@@ -8,7 +8,7 @@
         <h1><%= title %></h1>
         <p>Welcome to <%= title %></p>
         <h2>Most recent photo</h2>
-        <%- include('photos/photo', { photo: photo }) %>
+        <%- include('photos/photo', { photo, link: true }) %>
         <p><a href="/photos">See other photos</a></p>
     </div>
 </main>
