--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="main-footer">
     <div class="content-wrapper">
-        &copy; 2008–2024 Maxim Khan-Magomedov
+        <small>&copy; 2008–2024 Maxim Khan-Magomedov</small>
     </div>
 </footer>
