--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,6 +1,6 @@
 <header class="main-header">
     <div class="content-wrapper">
-        <nav>
+        <nav class="main-nav">
             <p class="logo"><a href="/">stereo.photo</a></p>
             <ul class="main-nav">
                 <li><a href="/photos">All photos</a></li>
