--- a/views/photos/pagination.ejs
+++ b/views/photos/pagination.ejs
@@ -9,7 +9,7 @@
         <a href="/photos?page=<%= pagination.prev %>"
            class="prev"><%= pagination.prev %></a>
     <% } %>
-    <span><%= pagination.current %></span>
+    <span class="current"><%= pagination.current %></span>
     <% if (pagination.next) { %>
         <a href="/photos?page=<%= pagination.next %>"
            class="next"><%= pagination.next %></a>
