--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,18 +4,24 @@
     --aberration-shadow-c: .25rem .125rem .25rem rgba(0, 255, 255, .5), -.25rem -.125rem .25rem rgba(255, 0, 255, .5);
 
     --bg-main: #fff;
+    --bg-secondary: #eee;
 
-    --font-family-heading: serif;
-    --font-family-main: sans-serif;
+    --content-width: 68.75rem; /* 1100px */
 
+    --font-family-heading: "Cormorant Garamond", serif;
+    --font-family-main: "Roboto", sans-serif;
+
+    --font-size-decreased: .75rem;
     --font-size-normal: 1rem;
+    --font-size-increased: 1.125rem;
     --font-size-large: 1.5rem;
     --font-size-xl: 2rem;
     --font-size-xxl: 2.5rem;
 
-    --text-color-primary: #000;
-
-    --content-width: 68.75rem; /* 1100px */
+    --link-color: rgb(20, 127, 255);
+    --link-color-visited: rgb(20, 77, 250);
+    --link-color-active: rgb(255, 77, 20);
+    --link-color-hover: rgb(255, 77, 20);
 
     --spacer-s: 1rem; /* 16px */
     --spacer-xxs: calc(var(--spacer-s) / 4);
@@ -24,6 +30,9 @@
     --spacer-l: calc(var(--spacer-s) * 3);
     --spacer-xl: calc(var(--spacer-s) * 4);
     --spacer-xxl: calc(var(--spacer-s) * 6);
+
+    --text-color-primary: #000;
+    --text-color-secondary: #777;
 }
 
 *,
@@ -37,7 +46,7 @@
 html {
     background: var(--bg-main);
     color: var(--text-color-primary);
-    font: 400 1em var(--font-family-main);
+    font: 300 1em var(--font-family-main);
     margin: 0;
     padding: 0;
     -moz-text-size-adjust: none;
@@ -57,11 +66,36 @@ h4,
 h5,
 h6 {
     font-family: var(--font-family-heading);
+    font-weight: 500;
     margin: 0;
+}
+
+h1 {
+    font-size: var(--font-size-xxl);
+}
+
+h2 {
+    font-size: var(--font-size-xl);
 }
 
 figure {
     margin: 0;
+}
+
+a:link {
+    color: var(--link-color);
+    text-decoration: none;
+    transition: .125s;
+}
+
+a:visited {
+    color: var(--link-color-visited);
+}
+
+a:active,
+a:hover {
+    color: var(--link-color-active);
+    text-decoration: underline;
 }
 
 .content-wrapper {
@@ -70,29 +104,29 @@ figure {
     padding: var(--spacer-s);
 }
 
+.main-nav {
+    font-size: var(--font-size-large);
+}
+
 .logo {
     font: 400 var(--font-size-xxl) / 1 var(--font-family-heading);
     margin: 0;
     text-align: center;
 }
 
-.logo a {
+.main-nav a {
     color: inherit;
     text-decoration: none;
     text-shadow: var(--aberration-shadow-a);
     transition: 1s;
 }
 
-.logo a:focus, .logo a:hover {
+.main-nav a:focus, .main-nav a:hover {
     color: rgba(0, 0, 0, .75);
     text-shadow: var(--aberration-shadow-b);
 }
 
-.main-header nav {
-    font-size: var(--font-size-large);
-}
-
-.main-header ul {
+.main-nav ul {
     align-items: center;
     display: flex;
     justify-content: center;
@@ -101,12 +135,12 @@ figure {
     padding: 0;
 }
 
-.main-header li {
+.main-nav li {
     margin: 0;
     padding: 0;
 }
 
-.main-header li:not(:last-of-type)::after {
+.main-nav li:not(:last-of-type)::after {
      background: #aaa;
      content: '\A';
      display: inline-block;
@@ -115,7 +149,7 @@ figure {
      width: .125rem;
 }
 
-.main-header nav a {
+.main-nav a {
     display: inline-block;
     padding: var(--spacer-xxs) var(--spacer-s);
 }
@@ -134,4 +168,55 @@ figure {
 .photos li {
     margin: 0 0 var(--spacer-s) 0;
     padding: 0;
+}
+
+picture {
+    display: flex;
+}
+
+figure {
+    border-bottom: .0625rem solid var(--text-color-secondary);
+}
+
+figcaption {
+    padding: var(--spacer-xxs);
+}
+
+small {
+    color: var(--text-color-secondary);
+    font-size: var(--font-size-decreased);
+}
+
+.lead {
+    font-size: var(--font-size-increased);
+}
+
+.pagination > * {
+    display: inline-block;
+    padding: var(--spacer-xxs) var(--spacer-xs);
+}
+
+.pagination .spacer {
+    color: var(--text-color-secondary);
+}
+
+.pagination .current {
+    background: var(--bg-secondary);
+}
+
+.adjacent-photos {
+    display: flex;
+    flex-wrap: wrap;
+    padding: var(--spacer-xs);
+}
+
+.adjacent-photos {
+
+}
+.adjacent-photos .prev {
+    margin-right: auto;
+}
+
+.adjacent-photos .next {
+    margin-left: auto;
 }
