--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,13 @@
 <main>
     <div class="content-wrapper">
         <h1><%= title %></h1>
-        <p>Welcome to <%= title %></p>
-        <h2>Most recent photo</h2>
-        <%- include('photos/photo', { photo, link: true }) %>
-        <p><a href="/photos">See other photos</a></p>
+        <p class="lead">Welcome to <%= title %></p>
+
+        <article>
+            <h2>Most recent photo</h2>
+            <%- include('photos/photo', { photo, link: true }) %>
+            <p><a href="/photos">See other photos</a>.</p>
+        </article>
     </div>
 </main>
 <%- include('layout/footer') %>
