--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -1,5 +1,8 @@
 <head>
     <title><%= title %></title>
     <meta charset="UTF-8"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500&family=Roboto:wght@300;400&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="/stylesheets/style.css"/>
 </head>
