--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,15 @@
 <main>
     <div class="content-wrapper">
         <h1><%= title %></h1>
-        <p class="lead">Welcome to <%= title %></p>
+        <p class="lead">
+            This is a site about stereo photography in crossview technique.
+            All photos are taken by Maxim Khan-Magomedov. Image for the left
+            eye is on the right, and image for the right eye is on the left.
+            To see the volume, one needs to cross eyes until images combine
+            (there should be three images in the field of view as a result:
+            right, stereo, left).<br/>
+            Read more in <a href="/about">about</a> section.
+        </p>
 
         <article>
             <h2>Most recent photo</h2>
