Add robots.txt and more photos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <article>
             <h2>Most recent photo</h2>
             <%- include('photos/photo', { photo, link: true }) %>
-            <p><a href="/photos">See other photos</a>.</p>
+            <p><a href="/photos">See other photos</a>. The list is being updated.</p>
         </article>
     </div>
 </main>
