--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -6,6 +6,7 @@
 <main>
     <div class="content-wrapper">
         <h1>All photos, page <%= pagination.current %></h1>
+        <p>The list is being updated, new photos will be added soon.</p>
         <ul class="photos">
             <% for (let photo of photos) { %>
                 <li>
