--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         </p>
 
         <article>
-            <h2>Most recent photo</h2>
+            <h2>Random photo</h2>
             <%- include('photos/photo', { photo, link: true }) %>
             <p><a href="/photos">See other photos</a>. The list is being updated.</p>
         </article>
